--- a/templates/bookmarks.html
+++ b/templates/bookmarks.html
@@ -5,18 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SKYPROGRAM bookmarks</title>
-  <link href="css/styles.min.css" rel="stylesheet">
+  <link href="../static/styles.min.css" rel="stylesheet">
 </head>
 
 <body>
   <header class="container header">
     <div class="header__wrapper">
-      <a href="/" class="header__btn-back">
+      <a href="/static" class="header__btn-back">
         <svg class="header__btn-icon" width="19" height="16">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use>
         </svg>
       </a>
-      <a href="/" class="header__logo-link">
+      <a href="/static" class="header__logo-link">
         <svg class="header__logo" width="161" height="26">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#bookmarks"></use>
         </svg>
@@ -27,82 +27,82 @@
     <section class="items">
       <div class="items__item item">
         <div class="item__top">
-          <a href="/user-feed.html" class="item__head">
+          <a href="/templates/user-feed.html-feed.html" class="item__head">
             <div class="item__ava-wrap">
-              <img src="img/ava1.png" alt="" class="item__ava" width="47">
+              <img src="../static/img/ava1.png" alt="" class="item__ava" width="47">
             </div>
             <span class="item__username">skypro.08</span>
           </a>
           <a href="#" class="item__delete">Удалить</a>
         </div>
-        <a href="/post.html" class="item__post-link">
-          <img src="img/post5.jpg" alt="" width="348" class="item__post-img">
+        <a href="/main/templates/post.html/post.html" class="item__post-link">
+          <img src="../static/img/post5.jpg" alt="" width="348" class="item__post-img">
         </a>
-        <p class="item__descr">Текст описания длинный... <a href="/post.html" class="item__btn-more">Еще</a></p>
+        <p class="item__descr">Текст описания длинный... <a href="/main/templates/post.html/post.html" class="item__btn-more">Еще</a></p>
         <div class="item__post-info">
           <div class="item__counter">
-            <img src="img/eye.png" alt="" class="item__counter-icon" width="26">
+            <img src="../static/img/eye.png" alt="" class="item__counter-icon" width="26">
             <span class="item__counter-text">212</span>
           </div>
         </div>
         <div class="item__post-bottom">
-          <a href="/post.html" class="item__btn-more">Подробнее</a>
+          <a href="/main/templates/post.html/post.html" class="item__btn-more">Подробнее</a>
           <button type="button" class="item__bookmark-btn">
-            <img src="img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
+            <img src="../static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
           </button>
         </div>
       </div>
       <div class="items__item item">
         <div class="item__top">
-          <a href="/user-feed.html" class="item__head">
+          <a href="/templates/user-feed.html-feed.html" class="item__head">
             <div class="item__ava-wrap">
-              <img src="img/ava2.png" alt="" class="item__ava" width="47">
+              <img src="../static/img/ava2.png" alt="" class="item__ava" width="47">
             </div>
             <span class="item__username">Username</span>
           </a>
           <a href="#" class="item__delete">Удалить</a>
         </div>
-        <a href="/post.html" class="item__post-link">
-          <img src="img/post6.jpg" alt="" width="348" class="item__post-img">
+        <a href="/main/templates/post.html/post.html" class="item__post-link">
+          <img src="../static/img/post6.jpg" alt="" width="348" class="item__post-img">
         </a>
-        <p class="item__descr">Текст описания длинный... <a href="/post.html" class="item__btn-more">Еще</a></p>
+        <p class="item__descr">Текст описания длинный... <a href="/main/templates/post.html/post.html" class="item__btn-more">Еще</a></p>
         <div class="item__post-info">
           <div class="item__counter">
-            <img src="img/eye.png" alt="" class="item__counter-icon" width="26">
+            <img src="../static/img/eye.png" alt="" class="item__counter-icon" width="26">
             <span class="item__counter-text">212</span>
           </div>
         </div>
         <div class="item__post-bottom">
-          <a href="/post.html" class="item__btn-more">Подробнее</a>
+          <a href="/main/templates/post.html/post.html" class="item__btn-more">Подробнее</a>
           <button type="button" class="item__bookmark-btn">
-            <img src="img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
+            <img src="../static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
           </button>
         </div>
       </div>
       <div class="items__item item">
         <div class="item__top">
-          <a href="/user-feed.html" class="item__head">
+          <a href="/templates/user-feed.html-feed.html" class="item__head">
             <div class="item__ava-wrap">
-              <img src="img/ava2.png" alt="" class="item__ava" width="47">
+              <img src="../static/img/ava2.png" alt="" class="item__ava" width="47">
             </div>
             <span class="item__username">Username</span>
           </a>
           <a href="#" class="item__delete">Удалить</a>
         </div>
-        <a href="/post.html" class="item__post-link">
-          <img src="img/post7.jpg" alt="" width="348" class="item__post-img">
+        <a href="/main/templates/post.html/post.html" class="item__post-link">
+          <img src="../static/img/post7.jpg" alt="" width="348" class="item__post-img">
         </a>
-        <p class="item__descr">Текст описания длинный... <a href="/post.html" class="item__btn-more">Еще</a></p>
+        <p class="item__descr">Текст описания длинный... <a href="/main/templates/post.html/post.html" class="item__btn-more">Еще</a></p>
         <div class="item__post-info">
           <div class="item__counter">
-            <img src="img/eye.png" alt="" class="item__counter-icon" width="26">
+            <img src="../static/img/eye.png" alt="" class="item__counter-icon" width="26">
             <span class="item__counter-text">1023</span>
           </div>
         </div>
         <div class="item__post-bottom">
-          <a href="/post.html" class="item__btn-more">Подробнее</a>
+          <a href="/main/templates/post.html/post.html" class="item__btn-more">Подробнее</a>
           <button type="button" class="item__bookmark-btn active">
-            <img src="img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
+            <img src="../static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
           </button>
         </div>
       </div>
